[package]
name = "super-susano"
version = "0.0.1"
authors = [
	"Tinco Andringa <mail@tinco.nl>",
	"Gijsbert dos Santos<gijsbert26@gmail.com>"
]
build = "build.rs"

[[bin]]
name = "super-susano"

[dependencies.piston]
git = "https://github.com/PistonDevelopers/piston.git"

[dependencies.piston2d-graphics]
git = "https://github.com/PistonDevelopers/graphics.git"

[dependencies.pistoncore-sdl2_window]
git = "https://github.com/PistonDevelopers/sdl2_window.git"

[dependencies.piston2d-opengl_graphics]
git = "https://github.com/PistonDevelopers/opengl_graphics.git"

[dependencies]
image = "*"

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"
#version = "0.0.9"