[package]
name = "super-susano"
version = "0.0.1"
authors = [
	"Tinco Andringa <mail@tinco.nl>",
	"Gijsbert dos Santos<gijsbert26@gmail.com>"
]
build = "build.rs"

[[bin]]
name = "super-susano"


[dependencies]
image = "*"

piston = "0.2.0"
piston_window = "0.3.0"
piston2d-graphics = "0.1.4"
pistoncore-glutin_window = "0.2.0"
piston2d-opengl_graphics = "0.1.0"
piston2d-sprite = "0.1.0"
piston-texture = "0.1.0"

[dependencies.pistoncore-sdl2_window]
git = "https://github.com/PistonDevelopers/sdl2_game_window"

[dependencies.gl]
git = "https://github.com/bjz/gl-rs"